# shisuke-openbrain

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.claude/: README.md  settings.json
.claude/agents/: plan-reviewer.md  python-test-writer.md  secret-scanner.md  sql-migration-writer.md
.claude/commands/: db.md  mcp-test.md  phase-start.md  phase-verify.md  secrets-scan.md  techdebt.md
.claude/rules/: commit-style.md  python-style.md  sql-style.md
config/: features.yaml  postgresql.tuning.conf
docs/: phase-03-go-live.md  phase-04-vps-setup.md  phase-05-coolify-setup.md  phase-06-deploy-mcp.md  phase-06-env-checklist.md  phase-07-client-setup.md  phase-08-backups-monitoring.md  phase-09-hardening.md  phase-12b-go-live.md  phase-12c-go-live.md  phase-12d-go-live.md  phase-12e-go-live.md  phase-13-go-live.md  phase-14-go-live.md  phase-15-go-live.md
scripts/: backup-db.sh  check-client-endpoint.sh  check-index-usage.sh  check-pgvector.sh  load-schema.sh  restore-test.sh  run-tests.sh  scan-history-secrets.sh  verify-phase-00.sh  verify-phase-01.sh  verify-phase-02.sh  verify-phase-03.sh  verify-phase-04.sh  verify-phase-05.sh  verify-phase-06.sh  verify-phase-07.sh  verify-phase-08.sh  verify-phase-09.sh  verify-phase-10.sh  verify-phase-11.sh  verify-phase-12b.sh  verify-phase-12c.sh  verify-phase-12d.sh  verify-phase-12e.sh  verify-phase-13.sh  verify-phase-14.sh  verify-phase-15.sh  vps-harden.sh
services/mcp-server/: Dockerfile  README.md  pyproject.toml
services/mcp-server/src/brain_mcp/: __init__.py  auth.py  config.py  db.py  embed.py  health.py  ratelimit.py  server.py
services/mcp-server/src/brain_mcp/tools/: __init__.py  core_browse.py  core_capture.py  core_search.py  core_stats.py  docs_capture.py  docs_chunks.py  docs_search.py  graphify_export.py
services/mcp-server/tests/integration/: conftest.py  test_db.py  test_documents_schema.py  test_obsidian_notify.py  test_schema.py  test_tools_core.py  test_tools_documents.py  test_tools_graphify.py
services/mcp-server/tests/unit/: test_auth.py  test_config.py  test_embed.py  test_ratelimit.py
services/n8n/: README.md
services/n8n/workflows/: daily-digest.json  weekly-review.json
services/obsidian-sync/: Dockerfile  README.md  pyproject.toml
services/obsidian-sync/src/obsidian_sync/: __init__.py  config.py  db.py  main.py  render.py
services/obsidian-sync/tests/unit/: test_render.py  test_write_note.py
services/telegram-bot/: Dockerfile  README.md  pyproject.toml
services/telegram-bot/src/brain_bot/: __init__.py  config.py  handlers.py  mcp_client.py  queue_client.py  server.py
services/telegram-bot/tests/unit/: test_config.py  test_execute.py  test_handlers.py  test_mcp_client.py
services/workers/article/: Dockerfile  README.md  pyproject.toml
services/workers/article/src/worker_article/: __init__.py  chunker.py  config.py  fetcher.py  mcp_client.py  queue.py  worker.py
services/workers/article/tests/unit/: test_chunker.py  test_fetcher.py  test_process_one.py
services/workers/audio/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/workers/audio/src/worker_audio/: __init__.py  config.py  fetcher.py  queue.py  transcriber.py  worker.py
services/workers/audio/tests/unit/: test_fetcher.py  test_process_one.py  test_transcriber.py
services/workers/image/: Dockerfile  README.md  pyproject.toml
services/workers/image/src/worker_image/: __init__.py  analyzer.py  config.py  fetcher.py  mcp_client.py  worker.py
services/workers/image/tests/unit/: test_analyzer.py  test_fetcher.py  test_process_one.py
services/workers/pdf/: Dockerfile  README.md  pyproject.toml
services/workers/pdf/src/worker_pdf/: __init__.py  chunker.py  config.py  extractor.py  fetcher.py  worker.py
services/workers/pdf/tests/unit/: test_chunker.py  test_fetcher.py  test_process_one.py
sql/: 000_extensions.sql  001_thoughts.sql  002_match_thoughts.sql  003_dedup.sql
sql/modules/documents/: 010_documents.sql  011_chunks.sql  012_match_chunks.sql
sql/modules/obsidian/: 020_notify_document.sql
tests/e2e/: test_capture_search_loop.py  test_prod_smoke.py
tests/smoke/: phase-01.bats  phase-02.bats  phase-04.bats  phase-05.bats  phase-07.bats  phase-08.bats  phase-09.bats  phase-10.bats  phase-11.bats  phase-12b.bats  phase-12c.bats  phase-12d.bats  phase-12e.bats  phase-13.bats  phase-14.bats  phase-15.bats
