[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brain-mcp"
version = "0.1.0"
requires-python = ">=3.12"
description = "Python FastMCP server for the self-hosted Open Brain fork"
readme = "README.md"

dependencies = [
  "fastmcp>=2.0",
  "asyncpg>=0.30",
  "httpx>=0.27",
  "pydantic>=2.9",
  "uvicorn[standard]>=0.32",
  "python-dotenv>=1.0",
  "starlette>=0.41",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
  "testcontainers[postgres]>=4",
  "psycopg[binary]>=3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/brain_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "live: tests that hit real external APIs (OpenRouter etc.); opt-in only",
]
