[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brain-bot"
version = "0.1.0"
requires-python = ">=3.12"
description = "Telegram capture bot for the self-hosted Open Brain fork"
readme = "README.md"

dependencies = [
  "aiogram>=3.27",
  "httpx>=0.27",
  "redis>=5.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/brain_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
