[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worker-audio"
version = "0.1.0"
requires-python = ">=3.12"
description = "Audio (voice + YouTube) transcription worker for the self-hosted Open Brain"
readme = "README.md"

dependencies = [
  # faster-whisper is a 5-10x faster CTranslate2 reimplementation of
  # OpenAI Whisper. ~200 MB of deps. Models download on first use
  # under ~/.cache/huggingface; persisted via a Docker named volume.
  "faster-whisper>=1.0",
  # yt-dlp pulls audio from YouTube and ~1000 other sites.
  "yt-dlp>=2025.1.1",
  "httpx>=0.27",
  "redis>=5.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worker_audio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
