[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worker-image"
version = "0.1.0"
requires-python = ">=3.12"
description = "Image ingestion worker (OCR + description) for the self-hosted Open Brain"
readme = "README.md"

dependencies = [
  "httpx>=0.27",
  "redis>=5.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worker_image"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
