[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worker-pdf"
version = "0.1.0"
requires-python = ">=3.12"
description = "PDF ingestion worker for the self-hosted Open Brain"
readme = "README.md"

dependencies = [
  # pymupdf gives us text-layer extraction with layout preservation
  # at ~5MB instead of Docling's ~3GB PyTorch+transformers footprint.
  # Trade-off: scanned PDFs (no text layer) get skipped via the
  # "extract too short" fallthrough. For those, pre-OCR with
  # ocrmypdf or swap back to Docling.
  "pymupdf>=1.24",
  "httpx>=0.27",
  "redis>=5.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worker_pdf"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
